k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securedeploy-app
  namespace: default
  labels:
    app: securedeploy-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: securedeploy-app
